--- a/radiant-legacy/package.json
+++ b/radiant-legacy/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "sweetalert2": "^11.22.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
