--- a/radiant-legacy/package.json
+++ b/radiant-legacy/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.1"
   },
   "devDependencies": {
