--- a/radiant-legacy/package.json
+++ b/radiant-legacy/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.19.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
